# MythiccPoiseDiscordBot

./: .gitignore  Cargo.toml  Secrets.example.toml  deploy-bot.sh  shell.nix  test-bot.sh
secrets/deploy/: Secrets.example.toml
secrets/test/: Secrets.example.toml
src/: checks.rs  constants.rs  context_commands.rs  data_enums.rs  extensions.rs  log_channel.rs  main.rs  message_component_interactions.rs  slash_commands.rs  state.rs  utils.rs
src/log_channel/: user_events.rs  voice_events.rs
src/message_component_interactions/: guild_apply_menu.rs  pick_games_menu.rs
src/state/: active_collectors.rs  admins.rs  games.rs  guild_apply.rs  role_backups.rs  t_rooms.rs
