[package]
name = "mythicc-poise-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.164", features = ["derive"] }
chrono = "0.4.26"
shuttle-runtime = "0.25.0"
shuttle-secrets = "0.25.0"
shuttle-poise = "0.25.0"
shuttle-persist = "0.25.0"
poise = "0.5.5"
tokio = "1.32.0"
tracing = "0.1.37"
async-trait = "0.1.73"
